--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,26 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-find_package(KDE4 REQUIRED)
-include(KDE4Defaults)
-include(MacroLibrary)
+project(kipiplugins-doc)
 
-KDE4_CREATE_HANDBOOK(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR kipi-plugins)
+set(CMAKE_MIN_VERSION   "2.8.12")
+set(ECM_MIN_VERSION     "1.1.0")
+set(KF5_VERSION         "5.1.0")
+
+cmake_minimum_required(VERSION ${CMAKE_MIN_VERSION})
+
+############## ECM setup ######################
+
+find_package(ECM ${ECM_MIN_VERSION} CONFIG REQUIRED)
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+
+include(KDEInstallDirs)
+include(KDEFrameworkCompilerSettings)
+include(KDECMakeSettings)
+include(FeatureSummary)
+
+############## Find Packages ###################
+
+find_package(KF5DocTools ${KF5_VERSION} REQUIRED)
+
+KDOCTOOLS_CREATE_HANDBOOK(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR kipi-plugins)
